client: fix linkbar spacing

--- a/src/components/Client.scss
+++ b/src/components/Client.scss
@@ -111,3 +111,7 @@ $hover-color: #bdebff;
   align-items: center;
 }
 
+.linkBar > * {
+  margin-right: 17px;
+}
+
